Fixes homepage view on mobile where ads were getting in the way

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -74,7 +74,7 @@ body {
 /* Centered content container blocks */
 .inner {
     margin: 0 auto;
-    max-width: 1235px;
+    max-width: 1040px;
     width: 100%;
 }
 .inner.flex{
@@ -452,8 +452,6 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-
 }
 
 .post-card-excerpt {
@@ -715,7 +713,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 }
 
 .post-full-image {
-    margin: 0 -5vw -250px;
+    margin: 0 -10vw -165px;
     background: var(--lightgrey) center center;
     border-radius: 5px;
     overflow: hidden;
@@ -856,8 +854,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 .post-full-content video {
     display: block;
     margin: 1.5em auto;
-    /*max-width: 1040px;*/
-    max-width: 100%;
+    max-width: 1040px;
     height: auto;
 }
 @media (max-width: 1040px) {
@@ -1845,12 +1842,7 @@ Usage (In Ghost editor):
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*max-width: 920px;*/
-    /*padding-right: 30px;*/
-}
-
-.post-content img{
-    max-width: 100%;
+    max-width: 920px;
 }
 
 .post-template .post-content > p:first-child {
@@ -2290,39 +2282,30 @@ Usage (In Ghost editor):
     }
 }
 
-.post-left-content{
-    width: 80%;
+.side-bar{
+    flex-grow: 1;
+    order: 2;
+    display: flex;
+    min-height: 300px;
+    padding: 15px;
+    min-width: 20%;
+    margin-top: -70px;
+    flex-direction: column;
+    /*border: 1px solid red;*/
+    /*display: none;*/
+    /*float: right;*/
+    /*background: #fff;*/
+    /*overflow: hidden;*/
+    /*!* margin: 0 20px 40px; *!*/
+    /*background-size: cover;*/
+    /*border-radius: 5px;*/
+    /*box-shadow: 8px 14px 38px rgba(39,44,49,.06), 1px 3px 8px rgba(39,44,49,.03);*/
+    /*transition: all .5s ease;*/
+    /*justify-content: space-between;*/
 }
 
-/*.post-side-bar-content{*/
-    /*width: 20%;*/
-    /*float: right;*/
-    /*min-height: 500px;*/
-/*}*/
-
-/*.side-bar{*/
-    /*flex-grow: 1;*/
-    /*order: 2;*/
-    /*display: flex;*/
-    /*min-height: 300px;*/
-    /*padding: 15px;*/
-    /*min-width: 20%;*/
-    /*margin-top: -70px;*/
-    /*flex-direction: column;*/
-    /*!*border: 1px solid red;*!*/
-    /*!*display: none;*!*/
-    /*!*float: right;*!*/
-    /*!*background: #fff;*!*/
-    /*!*overflow: hidden;*!*/
-    /*!*!* margin: 0 20px 40px; *!*!*/
-    /*!*background-size: cover;*!*/
-    /*!*border-radius: 5px;*!*/
-    /*!*box-shadow: 8px 14px 38px rgba(39,44,49,.06), 1px 3px 8px rgba(39,44,49,.03);*!*/
-    /*!*transition: all .5s ease;*!*/
-    /*!*justify-content: space-between;*!*/
-/*}*/
-
-/*.side-bar-old{*/
-
-/*}*/
-
+@media (max-width: 650px) {
+    .side-bar {
+        display: none;
+    }
+}
